--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@ input,textarea{width:100%;padding:10px 12px;border-radius:12px;border:1px solid 
 .thumb-sm{width:56px;height:42px;border-radius:8px;overflow:hidden;background:#1a1a1d}
 .thumb-sm img{width:100%;height:100%;object-fit:cover}
 .actions-sm{display:flex;gap:8px}
-.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer}
+.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer;text-decoration:none}
 .btn.primary{background:linear-gradient(135deg,#ff5a00,#ff8640);border:none;font-weight:800}
 </style></head><body>
 <main class="container">
