--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
+
 <!DOCTYPE html><html lang="vi"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Dịch vụ tạo & quét QR Wechat</title>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
-:root{{--bg:#0b0b0c;--card:#121214;--muted:#9a9aa0;--text:#f3f3f4;--brand:#ff5a00;--brand2:#ff8640;--radius:16px;--max:1200px}}
-*{{box-sizing:border-box}}html,body{{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}}
-.container{{max-width:var(--max);margin:auto;padding:0 16px}}
-header{{position:sticky;top:0;z-index:40;background:linear-gradient(0deg,rgba(11,11,12,.7),rgba(11,11,12,.9));backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}}
-.head{{display:grid;grid-template-columns:1fr auto;gap:12px;align-items:center;padding:14px 0}}
-.logo{{font-weight:800;letter-spacing:.3px}}
-.cta{{display:flex;gap:10px}}
-.btn{{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer}}
-.btn.primary{{background:linear-gradient(135deg,var(--brand),var(--brand2));border:none;color:#fff;font-weight:800}}
-.grid{{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}}
-@media(max-width:1100px){{.grid{{grid-template-columns:repeat(2,1fr)}}}}
-@media(max-width:820px){{.grid{{grid-template-columns:1fr}}}}
-.card{{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:var(--radius);overflow:hidden;display:flex;flex-direction:column}}
-.thumb{{aspect-ratio:16/10;overflow:hidden}}.thumb img{{width:100%;height:100%;object-fit:cover;display:block}}
-.body{{padding:12px}}.title{{font-weight:800}}.meta{{display:flex;align-items:center;justify-content:space-between;font-size:13px;color:var(--muted)}}
-.price{{display:flex;gap:8px}}.old{{text-decoration:line-through;color:var(--muted)}}
-.section{{margin:22px 0}}
-.kv{{width:100%;border-radius:14px;border:1px solid rgba(255,255,255,.08)}}
-.badges{{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}}.pill{{padding:6px 10px;border:1px solid rgba(255,255,255,.08);border-radius:999px;font-size:12px;opacity:.9}}
+:root { --bg:#0b0b0c; --card:#121214; --muted:#9a9aa0; --text:#f3f3f4; --brand:#ff5a00; --brand2:#ff8640; --radius:16px; --max:1200px; }
+*{box-sizing:border-box}html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}
+.container{max-width:var(--max);margin:auto;padding:0 16px}
+header{position:sticky;top:0;z-index:40;background:linear-gradient(0deg,rgba(11,11,12,.7),rgba(11,11,12,.9));backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
+.head{display:grid;grid-template-columns:1fr auto;gap:12px;align-items:center;padding:14px 0}
+.logo{font-weight:800;letter-spacing:.3px}
+.cta{display:flex;gap:10px}
+.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer;text-decoration:none}
+.btn.primary{background:linear-gradient(135deg,var(--brand),var(--brand2));border:none;color:#fff;font-weight:800}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+@media(max-width:1100px){.grid{grid-template-columns:repeat(2,1fr)}}
+@media(max-width:820px){.grid{grid-template-columns:1fr}}
+.card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:var(--radius);overflow:hidden;display:flex;flex-direction:column}
+.thumb{aspect-ratio:16/10;overflow:hidden}.thumb img{width:100%;height:100%;object-fit:cover;display:block}
+.body{padding:12px}.title{font-weight:800}.meta{display:flex;align-items:center;justify-content:space-between;font-size:13px;color:var(--muted)}
+.price{display:flex;gap:8px}.old{text-decoration:line-through;color:var(--muted)}
+.section{margin:22px 0}
+.badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}.pill{padding:6px 10px;border:1px solid rgba(255,255,255,.08);border-radius:999px;font-size:12px;opacity:.9}
+/* Modal */
+#buyModal{display:none;position:fixed;inset:0;z-index:9999;align-items:center;justify-content:center;background:rgba(0,0,0,.6)}
+.modal-card{width:520px;background:#0f0f11;padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,.06)}
 </style></head><body>
 <header>
   <div class="container head">
@@ -43,8 +46,8 @@ header{{position:sticky;top:0;z-index:40;background:linear-gradient(0deg,rgba(11
 </main>
 
 <!-- BUY MODAL -->
-<div id="buyModal" style="display:none;position:fixed;inset:0;z-index:9999;align-items:center;justify-content:center;background:rgba(0,0,0,.6)">
-  <div style="width:520px;background:#0f0f11;padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,.06)">
+<div id="buyModal">
+  <div class="modal-card">
     <h3 id="buyTitle" style="margin:0 0 8px">Mua lượt tạo tài khoản</h3>
     <div style="margin:8px 0"><strong>Gói:</strong> <span id="buyProd"></span></div>
     <div style="margin:8px 0"><strong>Số tiền:</strong> <span id="buyAmount"></span> VND</div>
@@ -63,7 +66,7 @@ header{{position:sticky;top:0;z-index:40;background:linear-gradient(0deg,rgba(11
 </div>
 
 <script>
-// PRODUCTS (đơn vị giá: nghìn VND)
+// PRODUCTS (đơn vị: nghìn VND)
 const PRODUCTS = [{"id": "wechat-create-01", "slug": "wechat-create-01", "name": "Gói 1 lượt tạo WeChat", "price": 50, "oldPrice": 80, "img": "https://images.unsplash.com/photo-1555421689-43cad7100755?q=80&w=1200&auto=format&fit=crop", "tags": ["WeChat", "Create"], "cat": "Dịch vụ", "popular": 256, "date": "2025-10-28", "url": "https://example.com/wechat-create"}];
 
 function money(n){try{return Number(n).toLocaleString('vi-VN',{style:'currency',currency:'VND'}).replace('₫','đ')}catch(e){return n}}
