--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#0b0b0c;--card:#121214;--muted:#9a9aa0;--text:#f3f3f4;--brand:#ff5a00;--brand2:#ff8640;--radius:16px;--max:1100px}
+:root { --bg:#0b0b0c; --card:#121214; --muted:#9a9aa0; --text:#f3f3f4; --brand:#ff5a00; --brand2:#ff8640; --radius:16px; --max:1100px; }
 *{box-sizing:border-box}html,body{margin:0;padding:0;background:#0b0b0c;color:#f3f3f4;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}
 .container{max-width:var(--max);margin:auto;padding:0 16px}
 .panel{background:#111114;border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;margin:16px 0}
@@ -16,73 +16,52 @@ input,textarea{width:100%;padding:10px 12px;border-radius:12px;border:1px solid 
 .actions-sm{display:flex;gap:8px}
 .btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.08);background:#131316;color:#f3f3f4;cursor:pointer;text-decoration:none}
 .btn.primary{background:linear-gradient(135deg,#ff5a00,#ff8640);border:none;font-weight:800}
+.helper{font-size:12px;color:#9a9aa0}
 </style></head><body>
 <main class="container">
-  <p><small>Quy trình: Khách chuyển tiền → Gửi bill qua Zalo → Bạn xác nhận & quét → cập nhật <code>orders.json</code> → khách tra cứu ở <code>order.html</code>.</small></p>
+  <p class="helper">Quy trình: Khách chuyển tiền → Gửi bill qua Zalo → Bạn xác nhận & quét → cập nhật <strong>Google Sheet</strong> qua API → khách tra cứu ở <code>order.html</code>.</p>
 
   <div class="grid">
-    <!-- PRODUCTS -->
-    <div class="panel">
-      <h3>Sản phẩm</h3>
-      <div style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:8px">
-        <button class="btn" id="btnLoadProducts">Tải products.json</button>
-        <input type="file" id="fileProducts" accept="application/json" style="display:none">
-        <button class="btn" id="btnSaveProducts">Tải xuống products.json</button>
-      </div>
-      <label>ID</label><input id="pid">
-      <label>Tên</label><input id="pname">
-      <label>Giá</label><input id="pprice" type="number" step="0.01">
-      <label>Giá cũ</label><input id="pold" type="number" step="0.01">
-      <label>Ảnh (URL)</label><input id="pimg">
-      <label>Link đích</label><input id="purl">
-      <div style="margin-top:10px"><button class="btn primary" id="btnAddP">Thêm/Cập nhật</button></div>
-      <div id="plist" style="margin-top:10px"></div>
-    </div>
-
     <!-- ORDERS -->
     <div class="panel">
-      <h3>Đơn hàng</h3>
-      <div style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:8px">
-        <button class="btn" id="btnLoadOrders">Tải orders.json</button>
-        <input type="file" id="fileOrders" accept="application/json" style="display:none">
-        <button class="btn" id="btnExportOrders">Tải xuống orders.json</button>
-      </div>
+      <h3>Đơn hàng (kết nối Apps Script)</h3>
       <label>Order ID</label><input id="oid">
       <label>Mã bí mật</label><input id="osecret">
-      <label>Product ID</label><input id="opid">
-      <label>Số tiền</label><input id="oamount" type="number">
-      <label>Trạng thái</label><input id="ostatus" placeholder="pending/delivered/rejected">
+      <label>Product ID</label><input id="opid" value="wechat-create-01">
+      <label>Số tiền</label><input id="oamount" type="number" value="50000">
+      <label>Trạng thái</label><input id="ostatus" placeholder="pending/delivered/rejected" value="delivered">
       <label>Ghi chú kết quả</label><input id="oresult" placeholder="Đã tạo & quét lúc ...">
-      <div style="margin-top:10px;display:flex;gap:8px">
-        <button class="btn primary" id="btnUpsertOrder">Lưu/Update</button>
-        <button class="btn" id="btnMarkDone">Đánh dấu thành công</button>
+      <div style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap">
+        <button class="btn primary" id="btnPush">Lưu/Update lên Google Sheet</button>
+        <button class="btn" id="btnMarkDone">Đánh dấu thành công (nhập sẵn delivered)</button>
       </div>
-      <div id="olist" style="margin-top:10px"></div>
+      <p class="helper">API: https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec</p>
     </div>
   </div>
 </main>
 
 <script>
-let PRODUCTS=[], ORDERS=[];
+const GAS_URL = "https://script.google.com/macros/s/AKfycbyEIzP-IL2mYRI1wcUWKwH5m5adFYKFz4kc0F3wWNwR10nf1hM0b9XrRbOjL_HZs-Ku/exec";
+const ADMIN_KEY = "Ducthinh*123456789";
 
-// PRODUCTS
-const fp = { id: pid, name: pname, price: pprice, oldPrice: pold, img: pimg, url: purl };
-document.getElementById('btnLoadProducts').onclick = ()=> fileProducts.click();
-fileProducts.onchange = e=>{ const f=e.target.files[0]; const r=new FileReader(); r.onload=()=>{ PRODUCTS=JSON.parse(r.result); renderP(); }; r.readAsText(f); };
-document.getElementById('btnSaveProducts').onclick = ()=> download('products.json', JSON.stringify(PRODUCTS,null,2));
-document.getElementById('btnAddP').onclick = ()=>{ const p = { id: fp.id.value.trim(), name: fp.name.value.trim(), price: Number(fp.price.value||0), oldPrice: Number(fp.oldPrice.value||0), img: fp.img.value.trim(), url: fp.url.value.trim() }; if(!p.id) return alert('Cần ID'); const i = PRODUCTS.findIndex(x=>x.id===p.id); if(i>-1) PRODUCTS[i]=p; else PRODUCTS.push(p); renderP(); };
-function renderP(){ const box = document.getElementById('plist'); box.innerHTML=''; PRODUCTS.forEach(p=>{ const div=document.createElement('div'); div.className='item'; div.innerHTML=`<div class="thumb-sm">${p.img?`<img src="${p.img}">`:''}</div><div><div style="font-weight:800">${p.name}</div><div style="color:#9a9aa0">${p.id} · ${(p.price*1000).toLocaleString()}đ</div></div><div class="actions-sm"><button class="btn" data-id="${p.id}">Sửa</button></div>`; div.querySelector('button').onclick=()=>{ fp.id.value=p.id; fp.name.value=p.name; fp.price.value=p.price; fp.oldPrice.value=p.oldPrice; fp.img.value=p.img; fp.url.value=p.url; }; box.appendChild(div); }); }
-
-// ORDERS
 const fo = { oid, osecret, opid, oamount, ostatus, oresult };
-document.getElementById('btnLoadOrders').onclick = ()=> fileOrders.click();
-fileOrders.onchange = e=>{ const f=e.target.files[0]; const r=new FileReader(); r.onload=()=>{ ORDERS=JSON.parse(r.result); renderO(); }; r.readAsText(f); };
-document.getElementById('btnExportOrders').onclick = ()=> download('orders.json', JSON.stringify(ORDERS,null,2));
-document.getElementById('btnUpsertOrder').onclick = ()=>{ const o = { orderId: fo.oid.value.trim(), secret: fo.osecret.value.trim(), productId: fo.opid.value.trim(), amount: Number(fo.oamount.value||0), status: fo.ostatus.value.trim()||'pending', result: fo.oresult.value.trim() }; if(!o.orderId) return alert('Cần Order ID'); const i = ORDERS.findIndex(x=>x.orderId===o.orderId); if(i>-1) ORDERS[i]=o; else ORDERS.push(o); renderO(); };
-document.getElementById('btnMarkDone').onclick = ()=>{ const id = fo.oid.value.trim(); if(!id) return alert('Nhập Order ID'); const i = ORDERS.findIndex(x=>x.orderId===id); if(i<0) return alert('Không tìm thấy'); ORDERS[i].status='delivered'; renderO(); };
-function renderO(){ const box = document.getElementById('olist'); box.innerHTML=''; ORDERS.forEach(o=>{ const div=document.createElement('div'); div.className='item'; div.innerHTML=`<div class="thumb-sm"></div><div><div style="font-weight:800">${o.orderId}</div><div style="color:#9a9aa0">${o.productId||''} • ${(o.amount||0).toLocaleString()}đ • ${o.status}</div><div style="color:#9a9aa0">Mã: ${o.secret||''}</div><div>${o.result||''}</div></div><div class="actions-sm"><button class="btn" data-oid="${o.orderId}">Sửa</button></div>`; div.querySelector('button').onclick=()=>{ fo.oid.value=o.orderId; fo.osecret.value=o.secret||''; fo.opid.value=o.productId||''; fo.oamount.value=o.amount||''; fo.ostatus.value=o.status||''; fo.oresult.value=o.result||''; }; box.appendChild(div); }); }
 
-// util
-function download(name, text){ const blob=new Blob([text],{type:'application/json'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download=name; a.click(); URL.revokeObjectURL(a.href); }
+async function pushOrderToServer(o){
+  const params = new URLSearchParams({...o, adminKey: ADMIN_KEY});
+  const res = await fetch(GAS_URL, { method:'POST', body: params });
+  return res.json();
+}
+
+document.getElementById('btnPush').onclick = async ()=>{
+  const o = { orderId: fo.oid.value.trim(), secret: fo.osecret.value.trim(),
+              productId: fo.opid.value.trim(), amount: Number(fo.oamount.value||0),
+              status: fo.ostatus.value.trim()||'pending', result: fo.oresult.value.trim() };
+  if(!o.orderId) return alert('Cần Order ID');
+  const r = await pushOrderToServer(o);
+  if(r.ok) alert('Đã cập nhật đơn lên Google Sheet!');
+  else alert('Lỗi: ' + (r.error||'unknown'));
+};
+
+document.getElementById('btnMarkDone').onclick = ()=>{ fo.ostatus.value='delivered'; };
 </script>
 </body></html>
